RESOLVED FIXED264363
[WebGPU] GPUCommandEncoder does not update the state of the encoder
https://bugs.webkit.org/show_bug.cgi?id=264363
Summary [WebGPU] GPUCommandEncoder does not update the state of the encoder
Mike Wyrzykowski
Reported 2023-11-07 13:38:11 PST
[WebGPU] GPUCommandEncoder does not update the state of the encoder
Attachments
Mike Wyrzykowski
Comment 1 2023-11-07 13:38:22 PST
Mike Wyrzykowski
Comment 2 2023-11-07 14:07:52 PST
EWS
Comment 3 2023-11-08 04:37:37 PST
Committed 270383@main (30c2b2a3e5e5): <https://commits.webkit.org/270383@main> Reviewed commits have been landed. Closing PR #20128 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.